OptiNum/Installer/DOC/TEXINFO/parser.output
Terminals unused in grammar

   HYPHEN_YY
   COLON_YY
   EXCLAMATION_POINT_YY
   FILE_YY
   GET_YY
   EXTRACT_YY
   AND_YY
   LEVEL_YY
   HOST_YY
   SECRET_KEY_YY
   UNSIGNED_INTEGER_YY
   FLOAT_YY


State 109 conflicts: 2 shift/reduce
State 402 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement_list END_YY

    2 statement_list: /* empty */
    3               | statement_list statement

    4 statement: START_ENTRY_YY entry_statement_list END_ENTRY_YY

    5 entry_statement_list: /* empty */
    6                     | entry_statement_list keyword_value_pair
    7                     | entry_statement_list prerequisite_statement
    8                     | entry_statement_list PRIVATE_YY
    9                     | entry_statement_list PUBLIC_YY

   10 keyword_value_pair: PACKAGE_NAME_YY STRING_YY
   11                   | PACKAGE_VERSION_YY STRING_YY
   12                   | PACKAGE_VERSION_YY INTEGER_YY
   13                   | DOWNLOAD_URL_YY STRING_YY
   14                   | DOWNLOAD_URL_ENCRYPTED_YY STRING_YY
   15                   | DOWNLOAD_COMMAND_YY STRING_YY
   16                   | DOWNLOAD_COMMAND_ENCRYPTED_YY STRING_YY
   17                   | INSTALLATION_SCRIPT_YY STRING_YY
   18                   | INSTALLATION_SCRIPT_ENCRYPTED_YY STRING_YY
   19                   | OWNER_YY STRING_YY
   20                   | AUTHORIZATION_YY STRING_YY

   21 prerequisite_statement: PREREQUISITE_YY STRING_YY
   22                       | PREREQUISITE_YY STRING_YY STRING_YY

   23 statement: CLIENT_YY SENDING_YY installation_script STRING_YY INTEGER_YY INTEGER_YY entry_string_list
   24          | CLIENT_YY SENDING_YY download_info_encrypted STRING_YY INTEGER_YY INTEGER_YY entry_string_list
   25          | CLIENT_YY SENDING_YY AUTHORIZATION_YY STRING_YY INTEGER_YY INTEGER_YY entry_string_list
   26          | CLIENT_FINISHED_YY
   27          | FETCH_YY INSTALLATION_SCRIPT_YY FOR_YY ENTRY_YY entry_string_list ORDER_YY INTEGER_YY
   28          | FETCH_YY DOWNLOAD_INFO_YY FOR_YY ENTRY_YY entry_string_list ORDER_YY INTEGER_YY
   29          | FETCH_YY AUTHORIZATION_YY FOR_YY ENTRY_YY entry_string_list ORDER_YY INTEGER_YY
   30          | FETCH_YY PREREQUISITES_YY FOR_YY ENTRY_YY entry_string_list
   31          | RECEIVE_YY INSTALLATION_SCRIPT_YY SUCCEEDED_YY FOR_YY ENTRY_YY entry_string_list
   32          | RECEIVE_YY INSTALLATION_SCRIPT_YY FAILED_YY FOR_YY ENTRY_YY entry_string_list
   33          | RECEIVE_YY DOWNLOAD_INFO_YY SUCCEEDED_YY FOR_YY ENTRY_YY entry_string_list
   34          | RECEIVE_YY DOWNLOAD_INFO_YY FAILED_YY FOR_YY ENTRY_YY entry_string_list
   35          | RECEIVE_YY DOWNLOAD_URL_YY ENCRYPTED_YY SUCCEEDED_YY FOR_YY ENTRY_YY entry_string_list
   36          | RECEIVE_YY DOWNLOAD_URL_YY ENCRYPTED_YY FAILED_YY FOR_YY ENTRY_YY entry_string_list
   37          | RECEIVE_YY DOWNLOAD_COMMAND_YY ENCRYPTED_YY SUCCEEDED_YY FOR_YY ENTRY_YY entry_string_list
   38          | RECEIVE_YY DOWNLOAD_COMMAND_YY ENCRYPTED_YY FAILED_YY FOR_YY ENTRY_YY entry_string_list
   39          | RECEIVE_YY AUTHORIZATION_YY SUCCEEDED_YY FOR_YY ENTRY_YY entry_string_list
   40          | RECEIVE_YY AUTHORIZATION_YY FAILED_YY FOR_YY ENTRY_YY entry_string_list
   41          | VALIDATE_YY DISTINGUISHED_NAME_YY STRING_YY

   42 prerequisite_string_list: /* empty */
   43                         | prerequisite_string_list STRING_YY

   44 entry_string_list: /* empty */
   45                  | entry_string_list STRING_YY

   46 statement: ADD_YY PREREQUISITE_YY prerequisite_string_list FOR_YY ENTRY_YY entry_string_list
   47          | DELETE_YY ENTRY_YY entry_string_list FINALLY_YY
   48          | DELETE_YY ALL_YY ENTRIES_YY FOR_YY USER_YY FINALLY_YY
   49          | MARK_YY AS_YY DELETED_YY ENTRY_YY entry_string_list
   50          | MARK_YY AS_YY DELETED_YY ALL_YY ENTRIES_YY FOR_YY USER_YY
   51          | UNDELETE_YY ENTRY_YY entry_string_list
   52          | UNDELETE_YY ALL_YY DELETED_YY ENTRIES_YY FOR_YY USER_YY
   53          | DELETE_YY PREREQUISITE_YY prerequisite_string_list FOR_YY ENTRY_YY entry_string_list
   54          | DELETE_YY PREREQUISITES_YY FOR_YY ENTRY_YY entry_string_list
   55          | CLIENT_YY TO_YY SEND_YY ENVIRONMENT_YY SHELLSCRIPT_YY STRING_YY GLOBUS_SITE_YY STRING_YY admin_optional

   56 admin_optional: /* empty */
   57               | ADMIN_YY

   58 statement: CLIENT_YY SENDING_YY ENVIRONMENT_YY SHELLSCRIPT_YY GLOBUS_SITE_YY STRING_YY admin_optional
   59          | FETCH_YY ENVIRONMENT_YY SHELLSCRIPTS_YY FOR_YY GLOBUS_SITE_YY STRING_YY
   60          | RECEIVE_YY ENVIRONMENT_YY SHELLSCRIPT_YY SUCCEEDED_YY FOR_YY GLOBUS_SITE_YY STRING_YY
   61          | RECEIVE_YY ENVIRONMENT_YY SHELLSCRIPT_YY FAILED_YY FOR_YY GLOBUS_SITE_YY STRING_YY
   62          | DELETE_YY ENVIRONMENT_YY SHELLSCRIPTS_YY
   63          | DELETE_YY ENVIRONMENT_YY SHELLSCRIPTS_YY FOR_YY GLOBUS_SITE_YY STRING_YY
   64          | DELETE_YY ENVIRONMENT_YY SHELLSCRIPT_YY INTEGER_YY

   65 entry_or_entries: ENTRY_YY
   66                 | ENTRIES_YY

   67 statement: SHOW_YY entry_or_entries entry_string_list show_option_list

   68 show_option_list: /* empty */
   69                 | show_option_list show_option

   70 show_option: ALL_YY
   71            | USER_YY
   72            | PUBLIC_YY
   73            | WITH_PREREQUISITES_YY
   74            | WITH_DEPENDENTS_YY
   75            | WITH_INSTALLATION_SCRIPT_YY
   76            | HTML_YY
   77            | JAVASCRIPT_YY
   78            | LEVELS_YY level_list

   79 level_list: /* empty */
   80           | level_list INTEGER_YY INTEGER_YY
   81           | level_list INTEGER_YY INTEGER_YY SEMI_COLON_YY
   82           | level_list INTEGER_YY INTEGER_YY SLASH_YY

   83 statement: SHOW_YY CERTIFICATE_YY USER_YY html_optional
   84          | SHOW_YY CERTIFICATES_YY ALL_YY html_optional

   85 html_optional: /* empty */
   86              | HTML_YY

   87 statement: SHOW_YY ENVIRONMENT_YY SHELLSCRIPTS_YY show_environment_shellscript_option_list

   88 show_environment_shellscript_option_list: /* empty */
   89                                         | show_environment_shellscript_option_list show_environment_shellscript_option

   90 show_environment_shellscript_option: USER_YY
   91                                    | GLOBUS_SITE_YY STRING_YY
   92                                    | GLOBUS_SITES_YY ALL_YY

   93 statement: ENABLE_YY ENVIRONMENT_YY SHELLSCRIPT_YY INTEGER_YY
   94          | DISABLE_YY ENVIRONMENT_YY SHELLSCRIPT_YY INTEGER_YY
   95          | CLIENT_YY RECEIVE_YY ENTRY_YY INFO_YY SUCCEEDED_YY
   96          | CLIENT_YY RECEIVE_YY ENTRY_YY INFO_YY FAILED_YY
   97          | SET_YY EFFECTIVE_USER_YY STRING_YY
   98          | ADD_YY installation_script STRING_YY TO_YY ENTRY_YY entry_string_list

   99 installation_script: INSTALLATION_SCRIPT_YY
  100                    | INSTALLATION_SCRIPT_ENCRYPTED_YY

  101 statement: ADD_YY download_info STRING_YY TO_YY ENTRY_YY entry_string_list

  102 download_info: DOWNLOAD_URL_YY
  103              | DOWNLOAD_COMMAND_YY
  104              | download_info_encrypted

  105 download_info_encrypted: DOWNLOAD_URL_ENCRYPTED_YY
  106                        | DOWNLOAD_COMMAND_ENCRYPTED_YY

  107 statement: ADD_YY AUTHORIZATION_YY STRING_YY TO_YY ENTRY_YY entry_string_list
  108          | CLIENT_YY TO_YY TRANSFER_YY PROXY_CREDENTIAL_YY STRING_YY
  109          | PROXY_CREDENTIAL_YY STRING_YY INVALID_YY CLIENT_YY NOT_YY TO_YY TRANSFER_YY
  110          | CLIENT_YY SENDING_YY PROXY_CREDENTIAL_YY

  111 install_or_reinstall: INSTALL_YY
  112                     | REINSTALL_YY

  113 package_version_optional: /* empty */
  114                         | PACKAGE_VERSION_YY STRING_YY

  115 stdout_filename_optional: /* empty */
  116                         | STDOUT_FILENAME_YY STRING_YY

  117 stderr_filename_optional: /* empty */
  118                         | STDERR_FILENAME_YY STRING_YY

  119 timeout_optional: /* empty */
  120                 | TIMEOUT_YY INTEGER_YY

  121 reinstall_prerequisites_optional: /* empty */
  122                                 | REINSTALL_YY PREREQUISITES_YY
  123                                 | NO_YY REINSTALL_YY PREREQUISITES_YY

  124 link_expression_list: /* empty */
  125                     | link_expression_list link_expression

  126 link_expression: NO_LINKS_YY
  127                | WITH_LINKS_YY
  128                | LINK_DIRECTORY_YY STRING_YY

  129 statement: install_or_reinstall PACKAGE_NAME_YY STRING_YY package_version_optional GLOBUS_SITE_YY STRING_YY stdout_filename_optional stderr_filename_optional timeout_optional reinstall_prerequisites_optional link_expression_list
  130          | CLIENT_YY TO_YY TRANSFER_YY KEY_PAIR_YY
  131          | CLIENT_YY SENDING_YY KEY_PAIR_YY STRING_YY STRING_YY
  132          | CLIENT_YY ERROR_YY NOT_YY SENDING_YY KEY_PAIR_YY
  133          | FETCH_YY KEY_PAIR_YY
  134          | RECEIVE_YY KEY_PAIR_YY SUCCEEDED_YY
  135          | RECEIVE_YY KEY_PAIR_YY FAILED_YY

  136 globus_site_list: GLOBUS_SITES_YY ALL_YY
  137                 | GLOBUS_SITE_YY ALL_YY
  138                 | sub_globus_site_list

  139 sub_globus_site_list: GLOBUS_SITE_YY STRING_YY
  140                     | GLOBUS_SITES_YY STRING_YY
  141                     | sub_globus_site_list STRING_YY

  142 statement: DISTRIBUTE_YY KEY_PAIR_YY globus_site_list
  143          | DELETE_YY KEY_PAIR_YY FROM_YY DATABASE_YY
  144          | DELETE_YY PUBLIC_KEY_YY FROM_YY DATABASE_YY
  145          | SESSION_ID_YY STRING_YY
  146          | ADD_YY GLOBUS_SITE_YY STRING_YY globus_site_option_list

  147 globus_site_option_list: /* empty */
  148                        | globus_site_option_list globus_site_option

  149 globus_site_option: INTERACTIVE_NODE_YY STRING_YY
  150                   | APPEND_LD_LIBRARY_PATH_YY STRING_YY
  151                   | APPEND_PATH_YY STRING_YY
  152                   | OPTDBCLI_PATH_YY STRING_YY
  153                   | IP_ADDRESS_YY STRING_YY
  154                   | INTERACTIVE_NODE_IP_ADDRESS_YY STRING_YY
  155                   | ENABLED_YY
  156                   | DISABLED_YY
  157                   | REPLACE_YY

  158 statement: SHOW_YY globus_site_list html_optional
  159          | DELETE_YY GLOBUS_SITE_YY STRING_YY FINALLY_YY
  160          | MARK_YY AS_YY DELETED_YY GLOBUS_SITE_YY STRING_YY
  161          | UNDELETE_YY GLOBUS_SITE_YY STRING_YY enable_optional

  162 enable_optional: /* empty */
  163                | ENABLE_YY
  164                | DISABLE_YY

  165 statement: ENABLE_YY GLOBUS_SITE_YY STRING_YY
  166          | DISABLE_YY GLOBUS_SITE_YY STRING_YY

  167 add_or_delete: ADD_YY
  168              | DELETE_YY

  169 statement: add_or_delete ADMIN_YY GLOBUS_SITE_YY STRING_YY USER_YY INTEGER_YY
  170          | EDIT_YY GLOBUS_SITE_YY STRING_YY SET_YY globus_site_option_list
  171          | EDIT_YY GLOBUS_SITE_YY STRING_YY UNSET_YY globus_site_option_list_1

  172 globus_site_option_list_1: /* empty */
  173                          | globus_site_option_list_1 globus_site_option_1

  174 globus_site_option_1: INTERACTIVE_NODE_YY
  175                     | APPEND_LD_LIBRARY_PATH_YY
  176                     | APPEND_PATH_YY
  177                     | OPTDBCLI_PATH_YY
  178                     | IP_ADDRESS_YY
  179                     | INTERACTIVE_NODE_IP_ADDRESS_YY

  180 statement: SHOW_YY PRIVILEGES_YY USER_YY html_optional
  181          | SHOW_YY PRIVILEGES_YY ALL_YY html_optional


Terminals, with rules where they appear

$end (0) 0
error (256)
HYPHEN_YY (258)
COLON_YY (259)
SEMI_COLON_YY (260) 81
SLASH_YY (261) 82
EXCLAMATION_POINT_YY (262)
FOR_YY (263) 27 28 29 30 31 32 33 34 35 36 37 38 39 40 46 48 50 52
    53 54 59 60 61 63
TO_YY (264) 55 98 101 107 108 109 130
NOT_YY (265) 109 132
ERROR_YY (266) 132
NO_YY (267) 123
ADD_YY (268) 46 98 101 107 146 167
DELETE_YY (269) 47 48 53 54 62 63 64 143 144 159 168
DELETED_YY (270) 49 50 52 160
UNDELETE_YY (271) 51 52 161
EDIT_YY (272) 170 171
REPLACE_YY (273) 157
ENTRY_YY (274) 27 28 29 30 31 32 33 34 35 36 37 38 39 40 46 47 49 51
    53 54 65 95 96 98 101 107
START_ENTRY_YY (275) 4
END_ENTRY_YY (276) 4
END_YY (277) 1
RECEIVE_YY (278) 31 32 33 34 35 36 37 38 39 40 60 61 95 96 134 135
FILE_YY (279)
SUCCEEDED_YY (280) 31 33 35 37 39 60 95 134
FAILED_YY (281) 32 34 36 38 40 61 96 135
MARK_YY (282) 49 50 160
AS_YY (283) 49 50 160
FINALLY_YY (284) 47 48 159
STRING_YY (285) 10 11 13 14 15 16 17 18 19 20 21 22 23 24 25 41 43
    45 55 58 59 60 61 63 91 97 98 101 107 108 109 114 116 118 128 129
    131 139 140 141 145 146 149 150 151 152 153 154 159 160 161 165
    166 169 170 171
PACKAGE_NAME_YY (286) 10 129
PACKAGE_VERSION_YY (287) 11 12 114
DOWNLOAD_INFO_YY (288) 28 33 34
DOWNLOAD_URL_YY (289) 13 35 36 102
DOWNLOAD_URL_ENCRYPTED_YY (290) 14 105
DOWNLOAD_COMMAND_YY (291) 15 37 38 103
DOWNLOAD_COMMAND_ENCRYPTED_YY (292) 16 106
PREREQUISITE_YY (293) 21 22 46 53
PREREQUISITES_YY (294) 30 54 122 123
ORDER_YY (295) 27 28 29
INSTALLATION_SCRIPT_YY (296) 17 27 31 32 99
INSTALLATION_SCRIPT_ENCRYPTED_YY (297) 18 100
AUTHORIZATION_YY (298) 20 25 29 39 40 107
CLIENT_FINISHED_YY (299) 26
CLIENT_YY (300) 23 24 25 55 58 95 96 108 109 110 130 131 132
SENDING_YY (301) 23 24 25 58 110 131 132
FETCH_YY (302) 27 28 29 30 59 133
GET_YY (303)
EXTRACT_YY (304)
VALIDATE_YY (305) 41
DISTINGUISHED_NAME_YY (306) 41
ENVIRONMENT_YY (307) 55 58 59 60 61 62 63 64 87 93 94
SHELLSCRIPT_YY (308) 55 58 60 61 64 93 94
SHELLSCRIPTS_YY (309) 59 62 63 87
ADMIN_YY (310) 57 169
ENABLE_YY (311) 93 163 165
ENABLED_YY (312) 155
DISABLE_YY (313) 94 164 166
DISABLED_YY (314) 156
SHOW_YY (315) 67 83 84 87 158 180 181
ALL_YY (316) 48 50 52 70 84 92 136 137 181
ENTRIES_YY (317) 48 50 52 66
AND_YY (318)
USER_YY (319) 48 50 52 71 83 90 169 180
SET_YY (320) 97 170
UNSET_YY (321) 171
PUBLIC_YY (322) 9 72
PRIVATE_YY (323) 8
WITH_PREREQUISITES_YY (324) 73
WITH_DEPENDENTS_YY (325) 74
WITH_INSTALLATION_SCRIPT_YY (326) 75
HTML_YY (327) 76 86
JAVASCRIPT_YY (328) 77
LEVEL_YY (329)
LEVELS_YY (330) 78
INFO_YY (331) 95 96
EFFECTIVE_USER_YY (332) 97
CERTIFICATE_YY (333) 83
CERTIFICATES_YY (334) 84
PRIVILEGES_YY (335) 180 181
ENCRYPTED_YY (336) 35 36 37 38
OWNER_YY (337) 19
TRANSFER_YY (338) 108 109 130
PROXY_CREDENTIAL_YY (339) 108 109 110
INVALID_YY (340) 109
SEND_YY (341) 55
INSTALL_YY (342) 111
REINSTALL_YY (343) 112 122 123
GLOBUS_SITE_YY (344) 55 58 59 60 61 63 91 129 137 139 146 159 160 161
    165 166 169 170 171
HOST_YY (345)
GLOBUS_SITES_YY (346) 92 136 140
STDOUT_FILENAME_YY (347) 116
STDERR_FILENAME_YY (348) 118
TIMEOUT_YY (349) 120
INTERACTIVE_NODE_YY (350) 149 174
APPEND_LD_LIBRARY_PATH_YY (351) 150 175
APPEND_PATH_YY (352) 151 176
OPTDBCLI_PATH_YY (353) 152 177
IP_ADDRESS_YY (354) 153 178
INTERACTIVE_NODE_IP_ADDRESS_YY (355) 154 179
NO_LINKS_YY (356) 126
WITH_LINKS_YY (357) 127
LINK_DIRECTORY_YY (358) 128
SECRET_KEY_YY (359)
PUBLIC_KEY_YY (360) 144
KEY_PAIR_YY (361) 130 131 132 133 134 135 142 143
DISTRIBUTE_YY (362) 142
FROM_YY (363) 143 144
DATABASE_YY (364) 143 144
SESSION_ID_YY (365) 145
INTEGER_YY (366) 12 23 24 25 27 28 29 64 80 81 82 93 94 120 169
UNSIGNED_INTEGER_YY (367)
FLOAT_YY (368)


Nonterminals, with rules where they appear

$accept (114)
    on left: 0
program (115)
    on left: 1, on right: 0
statement_list (116)
    on left: 2 3, on right: 1 3
statement (117)
    on left: 4 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 46 47 48 49 50 51 52 53 54 55 58 59 60 61 62 63 64 67 83 84
    87 93 94 95 96 97 98 101 107 108 109 110 129 130 131 132 133 134
    135 142 143 144 145 146 158 159 160 161 165 166 169 170 171 180
    181, on right: 3
entry_statement_list (118)
    on left: 5 6 7 8 9, on right: 4 6 7 8 9
keyword_value_pair (119)
    on left: 10 11 12 13 14 15 16 17 18 19 20, on right: 6
prerequisite_statement (120)
    on left: 21 22, on right: 7
prerequisite_string_list (121)
    on left: 42 43, on right: 43 46 53
entry_string_list (122)
    on left: 44 45, on right: 23 24 25 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 45 46 47 49 51 53 54 67 98 101 107
admin_optional (123)
    on left: 56 57, on right: 55 58
entry_or_entries (124)
    on left: 65 66, on right: 67
show_option_list (125)
    on left: 68 69, on right: 67 69
show_option (126)
    on left: 70 71 72 73 74 75 76 77 78, on right: 69
level_list (127)
    on left: 79 80 81 82, on right: 78 80 81 82
html_optional (128)
    on left: 85 86, on right: 83 84 158 180 181
show_environment_shellscript_option_list (129)
    on left: 88 89, on right: 87 89
show_environment_shellscript_option (130)
    on left: 90 91 92, on right: 89
installation_script (131)
    on left: 99 100, on right: 23 98
download_info (132)
    on left: 102 103 104, on right: 101
download_info_encrypted (133)
    on left: 105 106, on right: 24 104
install_or_reinstall (134)
    on left: 111 112, on right: 129
package_version_optional (135)
    on left: 113 114, on right: 129
stdout_filename_optional (136)
    on left: 115 116, on right: 129
stderr_filename_optional (137)
    on left: 117 118, on right: 129
timeout_optional (138)
    on left: 119 120, on right: 129
reinstall_prerequisites_optional (139)
    on left: 121 122 123, on right: 129
link_expression_list (140)
    on left: 124 125, on right: 125 129
link_expression (141)
    on left: 126 127 128, on right: 125
globus_site_list (142)
    on left: 136 137 138, on right: 142 158
sub_globus_site_list (143)
    on left: 139 140 141, on right: 138 141
globus_site_option_list (144)
    on left: 147 148, on right: 146 148 170
globus_site_option (145)
    on left: 149 150 151 152 153 154 155 156 157, on right: 148
enable_optional (146)
    on left: 162 163 164, on right: 161
add_or_delete (147)
    on left: 167 168, on right: 169
globus_site_option_list_1 (148)
    on left: 172 173, on right: 171 173
globus_site_option_1 (149)
    on left: 174 175 176 177 178 179, on right: 173


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (statement_list)

    program         go to state 1
    statement_list  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: statement_list . END_YY
    3 statement_list: statement_list . statement

    ADD_YY               shift, and go to state 4
    DELETE_YY            shift, and go to state 5
    UNDELETE_YY          shift, and go to state 6
    EDIT_YY              shift, and go to state 7
    START_ENTRY_YY       shift, and go to state 8
    END_YY               shift, and go to state 9
    RECEIVE_YY           shift, and go to state 10
    MARK_YY              shift, and go to state 11
    CLIENT_FINISHED_YY   shift, and go to state 12
    CLIENT_YY            shift, and go to state 13
    FETCH_YY             shift, and go to state 14
    VALIDATE_YY          shift, and go to state 15
    ENABLE_YY            shift, and go to state 16
    DISABLE_YY           shift, and go to state 17
    SHOW_YY              shift, and go to state 18
    SET_YY               shift, and go to state 19
    PROXY_CREDENTIAL_YY  shift, and go to state 20
    INSTALL_YY           shift, and go to state 21
    REINSTALL_YY         shift, and go to state 22
    DISTRIBUTE_YY        shift, and go to state 23
    SESSION_ID_YY        shift, and go to state 24

    statement             go to state 25
    install_or_reinstall  go to state 26
    add_or_delete         go to state 27


state 3

    0 $accept: program $end .

    $default  accept


state 4

   46 statement: ADD_YY . PREREQUISITE_YY prerequisite_string_list FOR_YY ENTRY_YY entry_string_list
   98          | ADD_YY . installation_script STRING_YY TO_YY ENTRY_YY entry_string_list
  101          | ADD_YY . download_info STRING_YY TO_YY ENTRY_YY entry_string_list
  107          | ADD_YY . AUTHORIZATION_YY STRING_YY TO_YY ENTRY_YY entry_string_list
  146          | ADD_YY . GLOBUS_SITE_YY STRING_YY globus_site_option_list
  167 add_or_delete: ADD_YY .

    DOWNLOAD_URL_YY                   shift, and go to state 28
    DOWNLOAD_URL_ENCRYPTED_YY         shift, and go to state 29
    DOWNLOAD_COMMAND_YY               shift, and go to state 30
    DOWNLOAD_COMMAND_ENCRYPTED_YY     shift, and go to state 31
    PREREQUISITE_YY                   shift, and go to state 32
    INSTALLATION_SCRIPT_YY            shift, and go to state 33
    INSTALLATION_SCRIPT_ENCRYPTED_YY  shift, and go to state 34
    AUTHORIZATION_YY                  shift, and go to state 35
    GLOBUS_SITE_YY                    shift, and go to state 36

    $default  reduce using rule 167 (add_or_delete)

    installation_script      go to state 37
    download_info            go to state 38
    download_info_encrypted  go to state 39


state 5

   47 statement: DELETE_YY . ENTRY_YY entry_string_list FINALLY_YY
   48          | DELETE_YY . ALL_YY ENTRIES_YY FOR_YY USER_YY FINALLY_YY
   53          | DELETE_YY . PREREQUISITE_YY prerequisite_string_list FOR_YY ENTRY_YY entry_string_list
   54          | DELETE_YY . PREREQUISITES_YY FOR_YY ENTRY_YY entry_string_list
   62          | DELETE_YY . ENVIRONMENT_YY SHELLSCRIPTS_YY
   63          | DELETE_YY . ENVIRONMENT_YY SHELLSCRIPTS_YY FOR_YY GLOBUS_SITE_YY STRING_YY
   64          | DELETE_YY . ENVIRONMENT_YY SHELLSCRIPT_YY INTEGER_YY
  143          | DELETE_YY . KEY_PAIR_YY FROM_YY DATABASE_YY
  144          | DELETE_YY . PUBLIC_KEY_YY FROM_YY DATABASE_YY
  159          | DELETE_YY . GLOBUS_SITE_YY STRING_YY FINALLY_YY
  168 add_or_delete: DELETE_YY .

    ENTRY_YY          shift, and go to state 40
    PREREQUISITE_YY   shift, and go to state 41
    PREREQUISITES_YY  shift, and go to state 42
    ENVIRONMENT_YY    shift, and go to state 43
    ALL_YY            shift, and go to state 44
    GLOBUS_SITE_YY    shift, and go to state 45
    PUBLIC_KEY_YY     shift, and go to state 46
    KEY_PAIR_YY       shift, and go to state 47

    $default  reduce using rule 168 (add_or_delete)


state 6

   51 statement: UNDELETE_YY . ENTRY_YY entry_string_list
   52          | UNDELETE_YY . ALL_YY DELETED_YY ENTRIES_YY FOR_YY USER_YY
  161          | UNDELETE_YY . GLOBUS_SITE_YY STRING_YY enable_optional

    ENTRY_YY        shift, and go to state 48
    ALL_YY          shift, and go to state 49
    GLOBUS_SITE_YY  shift, and go to state 50


state 7

  170 statement: EDIT_YY . GLOBUS_SITE_YY STRING_YY SET_YY globus_site_option_list
  171          | EDIT_YY . GLOBUS_SITE_YY STRING_YY UNSET_YY globus_site_option_list_1

    GLOBUS_SITE_YY  shift, and go to state 51


state 8

    4 statement: START_ENTRY_YY . entry_statement_list END_ENTRY_YY

    $default  reduce using rule 5 (entry_statement_list)

    entry_statement_list  go to state 52


state 9

    1 program: statement_list END_YY .

    $default  reduce using rule 1 (program)


state 10

   31 statement: RECEIVE_YY . INSTALLATION_SCRIPT_YY SUCCEEDED_YY FOR_YY ENTRY_YY entry_string_list
   32          | RECEIVE_YY . INSTALLATION_SCRIPT_YY FAILED_YY FOR_YY ENTRY_YY entry_string_list
   33          | RECEIVE_YY . DOWNLOAD_INFO_YY SUCCEEDED_YY FOR_YY ENTRY_YY entry_string_list
   34          | RECEIVE_YY . DOWNLOAD_INFO_YY FAILED_YY FOR_YY ENTRY_YY entry_string_list
   35          | RECEIVE_YY . DOWNLOAD_URL_YY ENCRYPTED_YY SUCCEEDED_YY FOR_YY ENTRY_YY entry_string_list
   36          | RECEIVE_YY . DOWNLOAD_URL_YY ENCRYPTED_YY FAILED_YY FOR_YY ENTRY_YY entry_string_list
   37          | RECEIVE_YY . DOWNLOAD_COMMAND_YY ENCRYPTED_YY SUCCEEDED_YY FOR_YY ENTRY_YY entry_string_list
   38          | RECEIVE_YY . DOWNLOAD_COMMAND_YY ENCRYPTED_YY FAILED_YY FOR_YY ENTRY_YY entry_string_list
   39          | RECEIVE_YY . AUTHORIZATION_YY SUCCEEDED_YY FOR_YY ENTRY_YY entry_string_list
   40          | RECEIVE_YY . AUTHORIZATION_YY FAILED_YY FOR_YY ENTRY_YY entry_string_list
   60          | RECEIVE_YY . ENVIRONMENT_YY SHELLSCRIPT_YY SUCCEEDED_YY FOR_YY GLOBUS_SITE_YY STRING_YY
   61          | RECEIVE_YY . ENVIRONMENT_YY SHELLSCRIPT_YY FAILED_YY FOR_YY GLOBUS_SITE_YY STRING_YY
  134          | RECEIVE_YY . KEY_PAIR_YY SUCCEEDED_YY
  135          | RECEIVE_YY . KEY_PAIR_YY FAILED_YY

    DOWNLOAD_INFO_YY        shift, and go to state 53
    DOWNLOAD_URL_YY         shift, and go to state 54
    DOWNLOAD_COMMAND_YY     shift, and go to state 55
    INSTALLATION_SCRIPT_YY  shift, and go to state 56
    AUTHORIZATION_YY        shift, and go to state 57
    ENVIRONMENT_YY          shift, and go to state 58
    KEY_PAIR_YY             shift, and go to state 59


state 11

   49 statement: MARK_YY . AS_YY DELETED_YY ENTRY_YY entry_string_list
   50          | MARK_YY . AS_YY DELETED_YY ALL_YY ENTRIES_YY FOR_YY USER_YY
  160          | MARK_YY . AS_YY DELETED_YY GLOBUS_SITE_YY STRING_YY

    AS_YY  shift, and go to state 60


state 12

   26 statement: CLIENT_FINISHED_YY .

    $default  reduce using rule 26 (statement)


state 13

   23 statement: CLIENT_YY . SENDING_YY installation_script STRING_YY INTEGER_YY INTEGER_YY entry_string_list
   24          | CLIENT_YY . SENDING_YY download_info_encrypted STRING_YY INTEGER_YY INTEGER_YY entry_string_list
   25          | CLIENT_YY . SENDING_YY AUTHORIZATION_YY STRING_YY INTEGER_YY INTEGER_YY entry_string_list
   55          | CLIENT_YY . TO_YY SEND_YY ENVIRONMENT_YY SHELLSCRIPT_YY STRING_YY GLOBUS_SITE_YY STRING_YY admin_optional
   58          | CLIENT_YY . SENDING_YY ENVIRONMENT_YY SHELLSCRIPT_YY GLOBUS_SITE_YY STRING_YY admin_optional
   95          | CLIENT_YY . RECEIVE_YY ENTRY_YY INFO_YY SUCCEEDED_YY
   96          | CLIENT_YY . RECEIVE_YY ENTRY_YY INFO_YY FAILED_YY
  108          | CLIENT_YY . TO_YY TRANSFER_YY PROXY_CREDENTIAL_YY STRING_YY
  110          | CLIENT_YY . SENDING_YY PROXY_CREDENTIAL_YY
  130          | CLIENT_YY . TO_YY TRANSFER_YY KEY_PAIR_YY
  131          | CLIENT_YY . SENDING_YY KEY_PAIR_YY STRING_YY STRING_YY
  132          | CLIENT_YY . ERROR_YY NOT_YY SENDING_YY KEY_PAIR_YY

    TO_YY       shift, and go to state 61
    ERROR_YY    shift, and go to state 62
    RECEIVE_YY  shift, and go to state 63
    SENDING_YY  shift, and go to state 64


state 14

   27 statement: FETCH_YY . INSTALLATION_SCRIPT_YY FOR_YY ENTRY_YY entry_string_list ORDER_YY INTEGER_YY
   28          | FETCH_YY . DOWNLOAD_INFO_YY FOR_YY ENTRY_YY entry_string_list ORDER_YY INTEGER_YY
   29          | FETCH_YY . AUTHORIZATION_YY FOR_YY ENTRY_YY entry_string_list ORDER_YY INTEGER_YY
   30          | FETCH_YY . PREREQUISITES_YY FOR_YY ENTRY_YY entry_string_list
   59          | FETCH_YY . ENVIRONMENT_YY SHELLSCRIPTS_YY FOR_YY GLOBUS_SITE_YY STRING_YY
  133          | FETCH_YY . KEY_PAIR_YY

    DOWNLOAD_INFO_YY        shift, and go to state 65
    PREREQUISITES_YY        shift, and go to state 66
    INSTALLATION_SCRIPT_YY  shift, and go to state 67
    AUTHORIZATION_YY        shift, and go to state 68
    ENVIRONMENT_YY          shift, and go to state 69
    KEY_PAIR_YY             shift, and go to state 70


state 15

   41 statement: VALIDATE_YY . DISTINGUISHED_NAME_YY STRING_YY

    DISTINGUISHED_NAME_YY  shift, and go to state 71


state 16

   93 statement: ENABLE_YY . ENVIRONMENT_YY SHELLSCRIPT_YY INTEGER_YY
  165          | ENABLE_YY . GLOBUS_SITE_YY STRING_YY

    ENVIRONMENT_YY  shift, and go to state 72
    GLOBUS_SITE_YY  shift, and go to state 73


state 17

   94 statement: DISABLE_YY . ENVIRONMENT_YY SHELLSCRIPT_YY INTEGER_YY
  166          | DISABLE_YY . GLOBUS_SITE_YY STRING_YY

    ENVIRONMENT_YY  shift, and go to state 74
    GLOBUS_SITE_YY  shift, and go to state 75


state 18
